pointofsale/css/user_profile.css
.customerInfoOverlay .bbm-modal__topbar {
	margin-bottom: 10px;
}
.customerInfoOverlay .tabs {
	margin: 0 0 10px;
	display: none;
}
.customerInfoOverlay .tabs .tab, .checkoutOverlay .tabs .tab {
	display: none;
}
.customerInfoOverlay .tabs .profile-content, .checkoutOverlay .tabs .cash-checkout {
	display: block;
}
.customerInfoOverlay .bbm-modal, .invoiceDialogOverlay .bbm-modal, .checkoutOverlay .bbm-modal {
	max-width: 960px;
}
.customerInfoOverlay .bbm-modal__bottombar, .invoiceDialogOverlay .bbm-modal__bottombar {
	clear: both;
}

.customerInfoOverlay .loader {
	background: url('../images/preloader.gif');
	width: 30px;
	height: 30px;
	margin: 30px auto 0;
}

.profile-content fieldset {
	float: left;
	width: 48%;
	margin: 0 2% 30px 0;
	border: 4px solid rgb(212, 212, 212);
	padding: 10px 20px;
}

.profile-content fieldset:nth-child(2n) {
	margin: 0 0 30px 2%;
}

.profile-content fieldset legend {
	margin: 0 auto;
	padding: 0.3em 13px;
	position: relative;
	font-size: 17px;
	color: #333;
	background: #fff;
	border: none;
	width: auto;
	text-transform: uppercase;
	/*text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);*/
	letter-spacing: 1px;
}

.profile-content fieldset legend span {
	position: absolute;
	left: 0;
	right: 0;
	bottom: 2px;
	border: 4px solid rgb(212, 212, 212);
	border-top: none;
	display: block;
	height: 50%;
}

.profile-content #content-profile-view {
	display: none;
}

h3.content-profile-title {
	display: none;
}

.profile-content .field-label, .product-info-item span.label {
	font-weight: bold;
	display: inline-block;
	color: #3691F7;
}

.product-info-item span.label {
	width: 165px;
	float: left;
}

.product-info-item span.value {
	float: left;
	width: 324px;
}

.qty-split span.value {
	float: none;
	width: auto;
}

.profile-content .field-items {
	display: inline-block;
	font-size: 14px;
}

.profile-content .field-type-postal .field-label {
	position: absolute;
}

.profile > p, .profile > br {
	display: none;
}

.profile h2 {
	margin: 0 0 10px;
}

.profile .field {
	margin: 0 0 5px;
}

.invoice-history table.pure-table {
	margin: 10px 0 0;
	width: 100%;
}

.tab ul.pager {
	list-style: none outside none;
	padding: 0;
	margin: 20px 0;
	float: right;
}

.tab ul.pager li {
	display: inline-block;
}

.tab ul.pager li a, .tab ul.pager li.pager-current {
	margin: 0 3px;
	text-decoration: none;
	display: block;
	padding: 3px 10px;
	background: #ccc;
	margin: 0;
	color: #000;
}

.tab ul.pager li.pager-current {
	display: inline-block;
	background: #737373;
	color: #fff;
}

.tab ul.pager li a:hover {
	background: #737373;
	color: #fff;
}
.tab .pure-table th a, .open-tickets-container .pure-table th a {
	text-decoration: none;
	color: #000;
}
.tab .pure-table tr.even, .open-tickets-container .pure-table tr.even {
	background: #F5F5F5;
}

.tab .pure-table tbody tr:hover, .open-tickets-container .pure-table tbody tr:hover {
	background: #DDF4FE;
	cursor: pointer;
}
/*Payments Legend*/
div.settled-false {
	background: #FAAFAF;	
}

div.settled-true {
	background: #B6F8C3;
}

div.settled-exceeded {
	background: #FF4040;
}

.legend {
	margin: 20px 0 0;
}

.legend-item {
	margin-right: 22px;
	display: inline-block;
}

.legend-item .legend-box {
	width: 30px;
	height: 30px;
	display: inline-block;
	vertical-align: middle;
	margin: 0 8px 0 0;
}

.legend-item .legend-content {
	display: inline-block;
	vertical-align: middle;
	font-weight: bold;
}

